--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://digimind.recruiterbox.com/jobs/fk01oxq'>
+    Internship - Graphic Design Assistant  at Digimind
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://lifedojo.workable.com/j/AA6B24F69F'>LifeDojo - Jobs: Marketing Internship (Fall 2019) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -61,7 +67,7 @@
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284501-human-resource-internship'>Seeka Technology Human Resource Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284501-human-resource-internship'>Seeka Technology Human Resource Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -89,7 +95,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/schneider-electric-spain/job/oQnCafwJ'>Schneider Electric - Spain Careers - Internship in Process Management</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/schneider-electric-spain/job/oQnCafwJ'>Schneider Electric - Spain Careers - Internship in Process Management</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -204,7 +210,7 @@ Canada, Montreal; Head of Engineering and maintenance, Canada, Montreal?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://protix.recruitee.com/o/internship-rd-data-analyst-summer-job'>Internship R&D Data Analyst & summer job - Protix</a></h5> 
+<h5><a href='https://protix.recruitee.com/o/internship-rd-data-analyst-summer-job'>Internship R&D Data Analyst & summer job - Protix</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... We are building a fully automated hightech farm for a totally new industry, insect 
 breeding. Therefore, we are building the technology to understand and optimize
@@ -214,7 +220,7 @@ breeding. Therefore, we are building the technology to understand and optimize
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4367513002'>Job Application for Starry Internet Installer at Starry</a></h5> 
+<h5><a href='https://boards.greenhouse.io/starry/jobs/4367513002'>Job Application for Starry Internet Installer at Starry</a></h5> 
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -228,7 +234,7 @@ breeding. Therefore, we are building the technology to understand and optimize
 accuracy, as well as utilizing tools and processes from data sources to ensure 
 quality?...</p>
 <hr/>
-<h5><a href='https://sephora-sea.workable.com/j/3BACB19433'>Sephora SEA - Jobs: Training Intern (6 months) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sephora-sea.workable.com/j/3BACB19433'>Sephora SEA - Jobs: Training Intern (6 months) - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -262,7 +268,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oy6Dafwb&__jvst=ER+-+Employee+Referral&__jvsd=scEWPgwm&__jvsc=Twitter&bid=nXgXVLwl'>Nutanix Careers - Intern - Systems Engineer - Objects &amp; Calm</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKr9VfwZ&k=Job&j=oy6Dafwb&__jvst=ER+-+Employee+Referral&__jvsd=scEWPgwm&__jvsc=Twitter&bid=nXgXVLwl'>Nutanix Careers - Intern - Systems Engineer - Objects &amp; Calm</a></h5> 
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -304,7 +310,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://ajg.referrals.selectminds.com/jobs/internship-self-insurance-claims-officer-18163'>Internship - Self Insurance Claims Officer - Gallagher Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ajg.referrals.selectminds.com/jobs/internship-self-insurance-claims-officer-18163'>Internship - Self Insurance Claims Officer - Gallagher Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -462,10 +468,6 @@ will be providing reception coverage including processing telephone calls,?...</
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/wayfair/jobs/4300169002'>Job Application for Data Science - Internship/Working Student (m/f) at Wayfair</a></h5> 
-<p><span class="badge badge-light">Berlin, DE</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4315485002'>Job Application for Internship in IT Support at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
